<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.pontes.pontessarade.MainActivity">

    <item
        android:id="@+id/structure_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_structure" />
    <item
        android:id="@+id/mnuSettingsSubmenu"
        android:orderInCategory="250"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_settings_submenu">

        <!-- Settings submenu: -->
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="300"
                android:showAsAction="never"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/display_settings"
                android:orderInCategory="350"
                android:showAsAction="never"
                android:title="@string/mnu_display" />
            <item
                android:id="@+id/reset_defaults"
                android:orderInCategory="375"
                android:showAsAction="never"
                android:title="@string/title_default_settings" />
        </menu>
    </item>
    <item
        android:id="@+id/autoriSaradeTitle"
        android:orderInCategory="550"
        android:showAsAction="never"
        android:title="@string/autori_sarade_title" />
    <item
        android:id="@+id/sendSaradaTitle"
        android:orderInCategory="555"
        android:showAsAction="never"
        android:title="@string/open_send" />
    <item
        android:id="@+id/about_dialog"
        android:orderInCategory="700"
        android:showAsAction="never"
        android:title="@string/about" />
    <item
        android:id="@+id/mnuRate"
        android:orderInCategory="900"
        android:showAsAction="never"
        android:title="@string/mnu_rate" />
    <item
        android:id="@+id/online_help"
        android:orderInCategory="950"
        android:showAsAction="never"
        android:title="@string/open_help" />

</menu>