<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llSettings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/my_background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <CheckBox
        android:id="@+id/cbtSoundsSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/enable_sounds"
        android:textSize="@dimen/buttons_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbtSpeechSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/enable_speech"
        android:textSize="@dimen/buttons_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbtOnshakeSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/enable_shake"
        android:textSize="@dimen/buttons_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbtScreenAwakeSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/enable_screen_awake"
        android:textSize="@dimen/buttons_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbtImeSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/enable_ime_action"
        android:textSize="@dimen/buttons_size"
        android:textStyle="bold" />

</LinearLayout>