<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutSecond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/textInSettingsHeadingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sm_speak_type" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbSpeechType1"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_speak_type_1" />

            <RadioButton
                android:id="@+id/rbSpeechType2"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_speak_type_2" />

            <RadioButton
                android:id="@+id/rbSpeechType0"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_speak_type_0" />

        </RadioGroup>
    </LinearLayout>

</ScrollView>